adding some routes; migrated logic out of backend/src/app
