# frontend/src/app/types/openapi.yaml
@@ -1,26 +1,24 @@
 openapi: "3.0.0"
 info:
-  version: 1.0.1
-  title: Swagger Petstore
-  license:
-    name: MIT
+  version: 1.0.0
+  title: Baby Tracker
 servers:
-  - url: http://petstore.swagger.io/v1
+  - url: https://acardenas-baby-tracker.wm.r.appspot.com
 paths:
-  /pets:
+  /tasks:
     get:
-      summary: List all pets
-      operationId: listPets
+      summary: List Tasks
+      operationId: listTasks
       tags:
-        - pets
+        - tasks
       parameters:
-        - name: limit
+        - name: date
           in: query
           description: How many items to return at one time (max 100)
-          required: false
+          required: true
           schema:
-            type: integer
-            format: int32
+            type: string
+            format: date
       responses:
         "200":
           description: A paged array of pets
@@ -103,6 +101,7 @@ components:
           type: array
           items:
             $ref: "#/components/schemas/TaskField"
+
     TaskFieldValue:
       type: object
       properties:
@@ -110,6 +109,7 @@ components:
           type: string
         value:
           type: string
+
     TaskRecord:
       type: object
       required:
@@ -123,9 +123,9 @@ components:
         task_id:
           type: string
           format: UUID
-        # user_id:
-        #   type: string
-        #   format: UUID
+        user_id:
+          type: string
+          format: UUID
         completed_at:
           type: string
           format: date-time
@@ -153,6 +153,16 @@ components:
             - input
             - number
             - textarea
+
+    User:
+      type: object
+      properties:
+        id:
+          type: string
+          format: UUID
+        name:
+          type: string
+
     Pet:
       type: object
       required:
